[package]
name = "game_engine"
version = "0.0.1"
edition = "2021"

[lib]
path = "mod.rs"

[dependencies]
anyhow = "1.0.86"
rand = "0.8.5"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v7",
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]